# fca00c-asteroids

contracts/logging_engine/: Cargo.toml
contracts/logging_engine/src/: engine.rs  lib.rs  types.rs
contracts/solution/src/: lib.rs  test.rs
